--- a/app/src/main/res/layout-land/activity_dashboard.xml
+++ b/app/src/main/res/layout-land/activity_dashboard.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.CustomSpeedometer
+            <com.github.matvapps.dashboarddevices.DashboardSpeedometer
                 android:id="@+id/pointerSpeedometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,9 +38,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
-                app:dd_indicator="NewCustomIndicator"
+                app:dd_indicator="DashboardIndicator"
                 app:dd_indicatorColor="#36ffffff"
-                app:dd_textSize="15sp"
                 app:dd_tickNumber="13" />
 
 
@@ -81,7 +80,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.CustomTachometer
+            <com.github.matvapps.dashboarddevices.DashboardTachometer
                 android:id="@+id/pointerTachometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,9 +89,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
-                app:dd_indicator="NewCustomIndicatorWithCircle"
+                app:dd_indicator="DashboardIndicatorWithCircle"
                 app:dd_indicatorColor="#36ffffff"
-                app:dd_textSize="15sp"
                 app:dd_tickNumber="8"
                 app:dd_use_unit="false" />
 
