--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.CustomSpeedometer
+            <com.github.matvapps.dashboarddevices.DashboardSpeedometer
                 android:id="@+id/pointerSpeedometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,9 +29,8 @@
                 android:layout_marginLeft="45dp"
                 android:layout_marginRight="45dp"
                 android:layout_marginStart="45dp"
-                app:dd_indicator="NewCustomIndicator"
+                app:dd_indicator="DashboardIndicator"
                 app:dd_indicatorColor="#36ffffff"
-                app:dd_textSize="15sp"
                 app:dd_tickNumber="13" />
 
 
@@ -66,7 +65,7 @@
             android:layout_marginTop="4dp"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.CustomTachometer
+            <com.github.matvapps.dashboarddevices.DashboardTachometer
                 android:id="@+id/pointerTachometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,9 +74,8 @@
                 android:layout_marginLeft="45dp"
                 android:layout_marginRight="45dp"
                 android:layout_marginStart="45dp"
-                app:dd_indicator="NewCustomIndicatorWithCircle"
+                app:dd_indicator="DashboardIndicatorWithCircle"
                 app:dd_indicatorColor="#36ffffff"
-                app:dd_textSize="15sp"
                 app:dd_tickNumber="8"
                 app:dd_use_unit="false" />
 
