--- a/app/src/main/res/layout-land/activity_dashboard.xml
+++ b/app/src/main/res/layout-land/activity_dashboard.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.DashboardSpeedometer
+            <com.github.matvapps.dashboardview.DashboardSpeedometer
                 android:id="@+id/pointerSpeedometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,7 +39,6 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
                 app:dd_indicator="DashboardIndicator"
-                app:dd_indicatorColor="#36ffffff"
                 app:dd_tickNumber="13" />
 
 
@@ -80,7 +79,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.matvapps.dashboarddevices.DashboardTachometer
+            <com.github.matvapps.dashboardview.DashboardTachometer
                 android:id="@+id/pointerTachometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,7 +89,6 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
                 app:dd_indicator="DashboardIndicatorWithCircle"
-                app:dd_indicatorColor="#36ffffff"
                 app:dd_tickNumber="8"
                 app:dd_use_unit="false" />
 
